--- a/minstelikes.html
+++ b/minstelikes.html
@@ -81,7 +81,7 @@
 
         <section>
             <article>
-                <h3>Het gebrek</h3>
+                <h2>Het gebrek</h2>
                 <p>De bus uit. Mijn zoon tukt in zijn kinderkoets. Eindelijk. Ik loop over het plein. Een gierende wind en een striemende miezerregen geselen mijn gezicht. De mensen kijken voor zich uit, ieder voor zich. Ik ben op weg richting de bibliotheek om Stijloefeningen te lenen van hoe heet die schijver, iets met een Q. Welk ...</p>
 
                 <footer>
@@ -95,7 +95,7 @@
 
             </article>
             <article>
-                <h3>Kinderboek</h3>
+                <h2>Kinderboek</h2>
                 <p>Kijk, daar gaat Max. Dag Max! Hij stapt uit de bus. Wat duwt hij daar vooruit? Jawel, een heuse kinderwagen! En wat voor één! Een groene! Zijn zoontje ligt er in te slapen. Die heeft gelukkig geen last van de kou. Want het is koud joh! Het regent een beetje en het waait flink. Alle...</p>
 
                 <footer>
@@ -108,7 +108,7 @@
                 <a href="artikelkinderboek.html" id="leesverder">Lees verder ></a>
             </article>
             <article>
-                <h3>Verrassing</h3>
+                <h2>Verrassing</h2>
                 <p>- ‘Biertje dan maar?’ – ‘Graag.’ – ‘Vermoeiende dag?’ – ‘Nah. Naar de bilbiotheek geweest. Met de bus.’ – ‘Gaat daar een bus naartoe?’ – ‘De bus stopt op het stationsplein.’ – ‘Ah. En vandaar moet je lopen?’ – ‘Ja, ik was met mijn zoon. Die sliep in zijn kinderwagen.’ – ‘Goed zo. Lekker wandelweer?’</p>
 
 
@@ -123,7 +123,7 @@
 
             </article>
             <article>
-                <h3>Blind</h3>
+                <h2>Blind</h2>
                 <p>Piepende remmen, bus 21 komt tot stilstand. De stem van de buschauffeur, naar mij gericht, zakelijk, niet vriendelijk, niet onvriendelijk: ‘Centraal Station, eindhalte’. Het sissende geluid van busdeuren die open gaan. Mensen drommen naar buiten. Voorzichtig vind ik mijn weg naar de uitgang en stap uit.</p>
 
                 <footer>
@@ -137,7 +137,7 @@
 
             </article>
             <article>
-                <h3>Steenkolenfrans</h3>
+                <h2>Steenkolenfrans</h2>
                 <p>Le premier fevrièr 2011. Presque midi. Le bus s’arrête. Ligne 21. Place de Gare Centrale. Je marche au derrière d’un poussette. Mon fils dort. Je suis en route au Bibliothèque Public pour emprunteur Exercices de Style de Raymond Queneau. C’est un livre très dificile d’acquérir. Mais zut alors, quelle ravage ici! Il y a beaucoup</p>
 
                 <footer>
@@ -151,24 +151,24 @@
 
             </article>
             <article>
-                <h3>Alzheimer</h3>
+                <h2>Alzheimer</h2>
                 <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
 
 
                 <footer>
                     <p>23 keer leuk gevonden</p>
-                    <a href="
-            inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
 
+
             </article>
 
             <article>
-                <h3>Vergezocht</h3>
+                <h2>Vergezocht</h2>
                 <p>Ik stap uit, euh… Hoe heet het? Zo’n vervoersdinges op wielen. Van de gemeente. Wit met blauw. Kom. Lijn 12. Of was het 21? Ik weet het niet. Ik stap uit en loop achter een wagentje aan. Van wie is dat wagentje? Ik weet het niet. Ik kijk in het wagentje. Er ligt een ventje...</p>
 
 
@@ -184,19 +184,20 @@
             </article>
 
             <article>
-                <h3>Beroemd</h3>
+                <h2>Beroemd</h2>
                 <p>Vlak voordat ik de bus uitstap bedank ik de buschauffeur via de spiegel voor zijn diensten. Hij zwaait joviaal terug. ‘Mijn vrouw is een groot fan van u’, roept hij. ‘Doe haar de groeten’, zeg ik en stap uit. Centraal Station. Ik duw mijn zoon voort. Hij slaapt. Zich onbewust van de last die er...</p>
 
 
                 <footer>
+
                     <p>54 keer leuk gevonden</p>
-                    <a href="
-                    inlogscherm.html"> <img id="heart" src="Assets/hearticon.png" alt="hearticon"></a>
-                    <a href="inlogscherm.html"> <img id="add" src="Assets/plusicon.png" alt="addicon"></a>
+                    <img id="heart" src="Assets/hearticon.png" alt="hearticon">
+                    <img id="add" src="Assets/plusicon.png" alt="addicon">
 
                 </footer>
 
                 <a href="artikelalzheimer.html" id="leesverder">Lees verder ></a>
+
 
             </article>
 
